# M3DGR

./: ArUco_evaluate.py  Grass01_fixed.txt  README.md  Varying-illu02.txt  calibration.md  checksums.txt
baseline_systems/A_LOAM_M3DGR/: README.md
baseline_systems/A_LOAM_M3DGR/src/A-LOAM/: CMakeLists.txt
baseline_systems/CTLO_M3DGR/: README.md
baseline_systems/CTLO_M3DGR/src/ctlo/: CMakeLists.txt
baseline_systems/CT_LIO_M3DGR/: README.md
baseline_systems/CT_LIO_M3DGR/src/ct_lio/: CMakeLists.txt
baseline_systems/Coco_LIC_M3DGR/: README.md
baseline_systems/Coco_LIC_M3DGR/src/: CMakeLists.txt
baseline_systems/Coco_LIC_M3DGR/src/coco_lic/: CMakeLists.txt
baseline_systems/DLIO_M3DGR/: README.md
baseline_systems/DM_VIO_M3DGR/: CMakeLists.txt  README.md
baseline_systems/DM_VIO_M3DGR/configs/: m3dgr.yaml
baseline_systems/DM_VIO_M3DGR/configs/tumvi_calib/: m3dgr.yaml
baseline_systems/DM_VIO_M3DGR/dm-vio-ros/: README.md  full_trajectory.tum  result.txt  resultScaled.txt  timings.txt  usedSettingsdso.txt
baseline_systems/DM_VIO_M3DGR/dm-vio-ros/src/: CMakeLists.txt
baseline_systems/DM_VIO_M3DGR/src/: main_dmvio_dataset.cpp
baseline_systems/DM_VIO_M3DGR/src/IMU/: BAIMULogic.cpp
baseline_systems/DM_VIO_M3DGR/src/IMUInitialization/: CoarseIMUInitOptimizer.cpp
baseline_systems/Fast_LIO2_M3DGR/: README.MD
baseline_systems/Fast_LIVO2_M3DGR/: README.md
baseline_systems/Fast_LIVO_M3DGR/: README.md
baseline_systems/Faster_LIO_M3DGR/: README.MD
baseline_systems/Fsat_LIVO2_M3DGR/: README.md
baseline_systems/Fsat_LIVO2_M3DGR/src/fast_livo2/: CMakeLists.txt
baseline_systems/GVINS_M3DGR/: README.md
baseline_systems/Ground_Fusion_M3DGR/: README.md
baseline_systems/HM_LIO_M3DGR/: README.md
baseline_systems/HM_LIO_M3DGR/src/hm_lio/: CMakeLists.txt
baseline_systems/IESKF_LIO_M3DGR/: README.md
baseline_systems/LIGO_M3DGR/: README.md
baseline_systems/LINS_M3DGR/: README.md
baseline_systems/LIO_Livox_M3DGR/: README.md
baseline_systems/LIO_SAM_M3DGR/: README.md
baseline_systems/LIO_SAM_M3DGR/src/lio_sam_mid360/: CMakeLists.txt
baseline_systems/LIO_SAM_M3DGR/src/lio_sam_modified/: CMakeLists.txt
baseline_systems/LIO_mapping_M3DGR/: README.md
baseline_systems/LIO_mapping_M3DGR/src/livox_repub/: README.md
baseline_systems/LOAM_Livox_M3DGR/: README.md
baseline_systems/LOG_LIO_M3DGR/: README.md
baseline_systems/LOG_LIO_M3DGR/src/log_lio/: CMakeLists.txt
baseline_systems/LVI_SAM_M3DGR/: README.md
baseline_systems/LVI_SAM_M3DGR/src/lvi_sam/: plus_params_camera.yaml  plus_params_lidar.yaml
baseline_systems/LeGO_LOAM_M3DGR/: README.md
baseline_systems/LiLi_OM_M3DGR/: README.md
baseline_systems/LiLi_OM_M3DGR/LiLi-OM-ROT/config/: m3dgr_mid360.yaml
baseline_systems/LiLi_OM_M3DGR/LiLi-OM-ROT/launch/: run_m3dgr_mid360.launch
baseline_systems/LiLi_OM_M3DGR/LiLi-OM-ROT/scripts/: InternalImuUnitConverter.py
baseline_systems/MM_LINS_M3DGR/: README.md
baseline_systems/ORB_SLAM2_M3DGR/: CMakeLists.txt  README.md  myvideo  myvideo.cpp
baseline_systems/ORB_SLAM2_M3DGR/include/: Converter.h  LoopClosing.h  PnPsolver.h
baseline_systems/ORB_SLAM2_M3DGR/src/: Converter.cc  LoopClosing.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  Tracking.cc
baseline_systems/ORB_SLAM3_M3DGR/: CMakeLists.txt  README.md
baseline_systems/ORB_SLAM3_M3DGR/src/: System.cc
baseline_systems/Point_LIO_M3DGR/: README.md
baseline_systems/R2LIVE_M3DGR/: README.md
baseline_systems/R3LIVE_M3DGR/: README.md
baseline_systems/SPP_M3DGR/: README.md
baseline_systems/SPP_M3DGR/src/: CMakeLists.txt
baseline_systems/SPP_M3DGR/src/SPP/: CMakeLists.txt  package.xml
baseline_systems/SPP_M3DGR/src/SPP/include/: IMU_Processing.h  voxel_mapping.hpp
baseline_systems/SPP_M3DGR/src/SPP/include/GPS/: GPSType.hpp  MathGPS.hpp  quat_ops.hpp
baseline_systems/SPP_M3DGR/src/SPP/include/ikd-Tree/: ikd_Tree.h
baseline_systems/SPP_M3DGR/src/SPP/src/: IMU_Processing.cpp  ikd_Tree.cpp  main.cpp  preprocess.cpp  voxel_mapping.cpp  voxel_mapping_common.cpp
baseline_systems/SR_LIVO_M3DGR/: README.md
baseline_systems/TartanVO_M3DGR/: README.md  TartanVO.py  publish_image_from_folder.py  tartanvo_node.py  traj.txt
baseline_systems/TartanVO_M3DGR/Datasets/: utils.py
baseline_systems/TartanVO_M3DGR/data/: README.md
baseline_systems/VINS_GPS_Wheel_M3DGR/: README.md
baseline_systems/VINS_Mono_M3DGR/: README.md
baseline_systems/VINS_Mono_M3DGR/src/: vins_result_loop.csv  vins_result_no_loop.csv
baseline_systems/VINS_RGBD_M3DGR/: README.md
baseline_systems/VIW_Fusion_M3DGR/: README.md
baseline_systems/VoxelMap_M3DGR/: README.md
x4_cam/src/: start.launch
x4_cam/src/src/: driver.cpp
(+347 files in other folders)
